--- a/index.html
+++ b/index.html
@@ -6,10 +6,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
+
+    <header>
+
+        <div class="container">
+
+            <nav>
+
+                <!--Gender list-->
+                <ul>
+                    <li class="nav-link">
+                        <a href="#">Donna</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Uomo</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Bambini</a>
+                    </li>
+                </ul>
+
+                <!--logo-->
+                <div>logo</div>
+
+                <!--pofile, liked, cart-->
+                <ul>
+                    <li>a</li>
+                    <li>b</li>
+                    <li>c</li>
+                </ul>
+            </nav>
+
+        </div>
+    </header>
+
+
+
+
+    <main>
+
+        <section class="container row">
+            <div class="image"></div>
+            <div class="image"></div>
+            <div class="image"></div>
+        </section>
+
+        <section class="container row">
+            <div class="image"></div>
+            <div class="image"></div>
+            <div class="image"></div>
+        </section>
+
+    </main>
+
+
+    <footer>
+        <div class="container row">
+
+            <!--information-->
+
+            <div class="information">
+                <div>
+                    Boolando s.r.l.
+                </div>
+                <ul>
+                    <li>informazioni legali</li>
+                    <li>intormativa privacy</li>
+                    <li>diritto di recesso</li>
+                </ul>
+            </div>
+
+
+            <!--social-->
+
+            <div class="social">
+                <div>trovaci anche su</div>
+                <ul>
+                    <li>tw</li>
+                    <li>tw</li>
+                    <li>tw</li>
+                    <li>tw</li>
+                    <li>tw</li>
+                </ul>
+            </div>
+
+        </div>
+
+    </footer>
 
 </body>
 
