layout nav main and footer finished

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </ul>
 
                 <!--logo-->
-                <div>logo</div>
+                <div><img class="logo" src="img/boolean-logo.png" alt="logo Boolean"></div>
 
                 <!--pofile, liked, cart-->
                 <ul>
@@ -51,15 +51,121 @@
     <main>
 
         <section class="container row">
-            <div class="image"></div>
-            <div class="image"></div>
-            <div class="image"></div>
+
+            <div class="image">
+                <div class="heart">C</div>
+                <div class="discount">
+                    -50%
+                </div>
+                <div class="discount eco">
+                    Sostenibilità
+                </div>
+                <img src="./img/1.webp" alt="">
+                <div class="box">
+                    <div class="brand">aaaaa</div>
+                    <div class="clothes"> AAA</div>
+                    <div class="new-price">
+                        aaaaa
+                        <span class="old-price">
+                            aaaa
+                        </span>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="image">
+                <div class="heart">C</div>
+                <div class="discount">
+                    -50%
+                </div>
+                <img src="./img/2.webp" alt="">
+                <div class="box">
+                    <div class="brand">aaaaa</div>
+                    <div class="clothes">aaaa</div>
+                    <div class="new-price">
+                        aaaaa
+                        <span class="old-price">
+                            aaaa
+                        </span>
+                    </div>
+
+                </div>
+            </div>
+            <div class="image">
+                <div class="heart">C</div>
+                <div class="discount">-50%</div>
+                <img src="./img/3.webp" alt="">
+                <div class="box">
+                    <div class="brand">aaaaa</div>
+                    <div class="clothes">aaaa</div>
+                    <div class="new-price">
+                        aaaaa
+                        <span class="old-price">
+                            aaaa
+                        </span>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         <section class="container row">
-            <div class="image"></div>
-            <div class="image"></div>
-            <div class="image"></div>
+
+            <div class="image">
+                <div class="heart">C</div>
+                <div class="discount">
+                    -50%
+                </div>
+                <div class="discount eco">
+                    Sostenibilità
+                </div>
+
+                <img src="./img/4.webp" alt="">
+                <div class="heart">C</div>
+                <div class="box">
+                    <div class="brand">aaaaa</div>
+                    <div class="clothes">aaa</div>
+                    <div class="new-price">
+                        aaaaa
+                        <span class="old-price">
+                            aaaa
+                        </span>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="image">
+                <div class="heart">C</div>
+                <img src="./img/5.webp" alt="">
+                <div class="box">
+                    <div class="brand">aaaaa</div>
+                    <div class="clothes">aaa</div>
+                    <div class="clothes">aaaaa</div>
+
+                </div>
+            </div>
+
+            <div class="image">
+                <div class="heart">C</div>
+                <div class="discount eco">
+                    Sostenibilità
+                </div>
+                <img src="./img/6.webp" alt="">
+                <div class="box">
+                    <div class="brand">aaaaa</div>
+                    <div class="clothes">aaa</div>
+                    <div class="new-price">
+                        aaaaa
+                        <span class="old-price">
+                            aaaa
+                        </span>
+                    </div>
+
+                </div>
+            </div>
+
         </section>
 
     </main>
