nav, main, footer completed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Boolando</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -36,9 +37,9 @@
 
                 <!--pofile, liked, cart-->
                 <ul>
-                    <li>a</li>
-                    <li>b</li>
-                    <li>c</li>
+                    <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
+                    <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></li></a>
                 </ul>
             </nav>
 
@@ -53,56 +54,54 @@
         <section class="container row">
 
             <div class="image">
-                <div class="heart">C</div>
-                <div class="discount">
-                    -50%
-                </div>
-                <div class="discount eco">
-                    Sostenibilità
-                </div>
-                <img src="./img/1.webp" alt="">
-                <div class="box">
-                    <div class="brand">aaaaa</div>
-                    <div class="clothes"> AAA</div>
-                    <div class="new-price">
-                        aaaaa
-                        <span class="old-price">
-                            aaaa
-                        </span>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="image">
-                <div class="heart">C</div>
-                <div class="discount">
-                    -50%
-                </div>
-                <img src="./img/2.webp" alt="">
-                <div class="box">
-                    <div class="brand">aaaaa</div>
-                    <div class="clothes">aaaa</div>
-                    <div class="new-price">
-                        aaaaa
-                        <span class="old-price">
-                            aaaa
-                        </span>
-                    </div>
-
-                </div>
-            </div>
-            <div class="image">
-                <div class="heart">C</div>
+                <div class="heart">&#9829;</div>
                 <div class="discount">-50%</div>
-                <img src="./img/3.webp" alt="">
+                <div class="discount eco">Sostenibilità</div>
+
+                <img src="./img/1.webp" alt="">
+
                 <div class="box">
-                    <div class="brand">aaaaa</div>
-                    <div class="clothes">aaaa</div>
-                    <div class="new-price">
-                        aaaaa
+                    <div class="brand">Levi's</div>
+                    <div class="clothes"> RELAXED FIT TEE UNISEX</div>
+                    <div class="new-price">14,99€
                         <span class="old-price">
-                            aaaa
+                            29,99€
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="image">
+                <div class="heart">&#9829;</div>
+                <div class="discount">-30%</div>
+
+                <img src="./img/2.webp" alt="">
+
+                <div class="box">
+                    <div class="brand">Guess</div>
+                    <div class="clothes">ROSES TEE</div>
+                    <div class="new-price">20,99€
+                        <span class="old-price">
+                            29,99€
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="image">
+                <div class="heart">&#9829;</div>
+                <div class="discount">-30%</div>
+
+                <img src="./img/3.webp" alt="">
+
+                <div class="box">
+                    <div class="brand">Come Zucchero Filato</div>
+                    <div class="clothes">VOGLIA DI COLORI PASTELLO</div>
+                    <div class="new-price">129,99€
+                        <span class="old-price">
+                            184,99€
                         </span>
                     </div>
                 </div>
@@ -110,59 +109,54 @@
 
         </section>
 
+
+
         <section class="container row">
 
             <div class="image">
-                <div class="heart">C</div>
-                <div class="discount">
-                    -50%
-                </div>
-                <div class="discount eco">
-                    Sostenibilità
-                </div>
+                <div class="heart">&#9829;</div>
+                <div class="discount">-50%</div>
+                <div class="discount eco">Sostenibilità</div>
 
                 <img src="./img/4.webp" alt="">
-                <div class="heart">C</div>
+
                 <div class="box">
-                    <div class="brand">aaaaa</div>
-                    <div class="clothes">aaa</div>
-                    <div class="new-price">
-                        aaaaa
+                    <div class="brand">Levi's</div>
+                    <div class="clothes">TEE UNISEX</div>
+                    <div class="new-price">14,99€
                         <span class="old-price">
-                            aaaa
+                            29,99€
                         </span>
                     </div>
-
                 </div>
             </div>
 
+
             <div class="image">
-                <div class="heart">C</div>
+                <div class="heart">&#9829;</div>
+
                 <img src="./img/5.webp" alt="">
-                <div class="box">
-                    <div class="brand">aaaaa</div>
-                    <div class="clothes">aaa</div>
-                    <div class="clothes">aaaaa</div>
 
+                <div class="box">
+                    <div class="brand">Maya Deluxe</div>
+                    <div class="clothes">STRIPE BODICE</div>
+                    <div class="new-price">99,99€</div>
                 </div>
             </div>
 
+
             <div class="image">
-                <div class="heart">C</div>
-                <div class="discount eco">
+                <div class="heart">&#9829;</div>
+                <div class="discount eco eco-only">
                     Sostenibilità
                 </div>
-                <img src="./img/6.webp" alt="">
-                <div class="box">
-                    <div class="brand">aaaaa</div>
-                    <div class="clothes">aaa</div>
-                    <div class="new-price">
-                        aaaaa
-                        <span class="old-price">
-                            aaaa
-                        </span>
-                    </div>
 
+                <img src="./img/6.webp" alt="">
+
+                <div class="box">
+                    <div class="brand">Esprit</div>
+                    <div class="clothes">MAGLIONE - BLACK</div>
+                    <div class="new-price">29,99€</div>
                 </div>
             </div>
 
@@ -178,7 +172,7 @@
 
             <div class="information">
                 <div>
-                    Boolando s.r.l.
+                    <h1>Boolando s.r.l.</h1>
                 </div>
                 <ul>
                     <li>informazioni legali</li>
@@ -191,13 +185,13 @@
             <!--social-->
 
             <div class="social">
-                <div>trovaci anche su</div>
+                <div>Trovaci anche su</div>
                 <ul>
-                    <li>tw</li>
-                    <li>tw</li>
-                    <li>tw</li>
-                    <li>tw</li>
-                    <li>tw</li>
+                    <li><a href=""><i class="fa-brands fa-square-x-twitter"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-square-pinterest"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-square-youtube"></i></a></li>
                 </ul>
             </div>
 
