--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <div class="discount eco">Sostenibilità</div>
 
                 <img src="./img/1.webp" alt="">
+                <img class="hover-image" src="./img/1b.webp" alt="">
 
                 <div class="box">
                     <div class="brand">Levi's</div>
@@ -77,6 +78,7 @@
                 <div class="discount">-30%</div>
 
                 <img src="./img/2.webp" alt="">
+                <img class="hover-image" src="./img/2b.webp" alt="">
 
                 <div class="box">
                     <div class="brand">Guess</div>
@@ -95,6 +97,8 @@
                 <div class="discount">-30%</div>
 
                 <img src="./img/3.webp" alt="">
+                <img class="hover-image" src="./img/3b.webp" alt="">
+
 
                 <div class="box">
                     <div class="brand">Come Zucchero Filato</div>
@@ -119,6 +123,8 @@
                 <div class="discount eco">Sostenibilità</div>
 
                 <img src="./img/4.webp" alt="">
+                <img class="hover-image" src="./img/4b.webp" alt="">
+
 
                 <div class="box">
                     <div class="brand">Levi's</div>
@@ -136,6 +142,8 @@
                 <div class="heart">&#9829;</div>
 
                 <img src="./img/5.webp" alt="">
+                <img class="hover-image" src="./img/5b.webp" alt="">
+
 
                 <div class="box">
                     <div class="brand">Maya Deluxe</div>
@@ -152,6 +160,8 @@
                 </div>
 
                 <img src="./img/6.webp" alt="">
+                <img class="hover-image" src="./img/6b.webp" alt="">
+
 
                 <div class="box">
                     <div class="brand">Esprit</div>
